# TechstackDjango

./: db.sqlite3  manage.py  pyproject.toml
auth/api/: serializer.py  urls.py  views.py
product/: models.py
product/api/: models.py  serializer.py  views.py
product/migrations/: 0001_initial.py
techstack/: asgi.py  settings.py  urls.py  wsgi.py
